# Ai-customer-Triage

./: .dockerignore  .env.example  .gitignore  OWNERS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_audit_logs.py  0003_add_ticket_queue_indexes.py  0004_add_reply_suggestions.py  0005_ai_confidence_workspace_settings.py  0006_gmail_live_sync_foundation.py  0007_gmail_sync_locks.py  0008_auto_triage_jobs.py  0009_core_workflow_polish.py  0010_operations_observability.py  0011_security_tenant_hardening.py  0012_pilot_release_controls.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  rate_limits.py  router.py
apps/api/app/core/: config.py  encryption.py  logging.py  rate_limit.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  ai_triage_result.py  (+15 more)
apps/api/tests/: conftest.py  test_ai_triage.py  test_audit_logs.py  test_auto_triage_pipeline.py  test_config.py  test_core_workflow_polish.py  test_gemini_client.py  test_gmail_connections.py  test_gmail_history_sync.py  test_gmail_import.py  test_gmail_token_lifecycle.py  test_gmail_watch.py  test_health.py  test_m7_release_smoke.py  test_operations.py  test_organizations.py  test_pilot_release_controls.py  test_pubsub_webhook.py  test_rate_limits.py  test_reply_approvals.py  test_reply_suggestions.py  test_security_authorization_matrix.py  test_tickets.py  test_workspace_settings.py
(+110 files in other folders)
