[project]
name = "support-triage-api"
version = "0.1.0"
description = "FastAPI backend for the AI customer support triage MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.5.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

