[project]
name = "support-triage-api"
version = "0.1.0"
description = "FastAPI backend for the AI customer support triage MVP."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "celery>=5.4.0",
  "email-validator>=2.2.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
  "psycopg[binary]>=3.2.0",
  "pyjwt>=2.10.0",
  "pydantic-settings>=2.5.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"


[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
